fixed: contents of editor overflowing

--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -9,6 +9,9 @@
 	display: inline;
 }
 .cm-scroller {
+	overflow-y: hidden;
+}
+#editor-container {
 	&::-webkit-scrollbar {
 		width: 0.3em;
 	}
